--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -40,42 +40,41 @@
             <form>
 
                 <table class="table3">
-                    <tr><td colspan="2">List your Property!</td></tr>
-                    <tr><td class="small">* Required Fields</td></tr>
+                    <tr><td colspan="3">List your Property!...</td>
+                    <td class="small">* Required Fields</td>
 
                     <tr>
                         <td><label for="bbname">B&B Name: *</label></td>
                         <td><input id="bbname" type="text" class="inputform" name="bbname" placeholder="Enter your B&B Name" required /></td>
 
-                    <td>
+                        <td>
+                            <label for="city">City: *</label></td>
+                        <td><input id="city" type="text" class="inputform" name="city" placeholder="Enter City" size="30" maxlength="50" required /></td>
+
+                        <td>
+                            <label for="city">Region: *</label></td>
+                        <td><input id="city" type="text" class="inputform" name="city" placeholder="Enter City" size="30" maxlength="50" required /></td>
+
+
+                    </tr>
+                    <tr><td>
                         <label for="address">Address: *</label></td>
                         <td><input id="address" type="text" class="inputform" name="address" placeholder=" Enter first line of your address" size="30" maxlength="50" required /></td>
-                    </tr>
 
-                    <tr><td>
+
+                    <td>
                         <label for="address2">Address Line 2: *</label></td>
                         <td><input id="address2" type="text" class="inputform" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
 
-
-                    <td>
-                        <label for="city">City: *</label></td>
-                        <td><input id="city" type="text" class="inputform" name="city" placeholder="Enter City" size="30" maxlength="50" required /></td>
-                    </tr>
-
-
-                    <tr><td>
+                     <td>
                         <label for="telephone">Telephone: *</label></td>
                         <td><input id="telephone" type="text" class="inputform" name="telephone" placeholder=" Enter your telephone number" size="20" maxlength="20" required /></td>
-
+                        </tr>
+                    <tr>
                         <td>
                             <label for="email">Email: *</label></td>
                         <td><input id="email" type="text" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
-                    </tr>
-
-
-
-
-                    <tr><td>
+                    <td>
                         <label for="bbdescription">B&B Description: *</label></td>
                         <td><input id="bbdescription" type="text" class="inputform" name="bbdescription" placeholder=" Enter a description of your B&B" size="30" maxlength="50" required /></td>
 
@@ -84,23 +83,25 @@
                         <label for="roomdescription">Room Description: *</label></td>
                         <td><input id="roomdescription" type="text" class="inputform" name="roomdescription" placeholder=" Enter a description of your rooms" size="30" maxlength="50" required /></td>
                     </tr>
+
                     <tr><td>
                         <label for="price">Price: *</label></td>
                         <td><input id="price" type="text" class="inputform" name="price" placeholder="Enter the price per night" required /></td>
                     <td>
                         <label for="checkin">Check-in time: *</label></td>
                         <td><input id="checkin" type="text" class="inputform" name="check-in" placeholder="Enter the check-in time" required /></td>
-                    </tr>
 
-                    <tr><td>
+
+                    <td>
                         <label for="checkout">Check-out time: *</label></td>
                         <td><input id="checkout" type="text" class="inputform" name="check-out" placeholder="Enter the check-out time" required /></td>
-                    <td>
+
+                        </tr><tr><td>
                         <label for="picture">Upload a picture: *</label></td>
                         <td><input id="picture" type="text" class="inputform" name="picture" required /></td>
-                    </tr>
 
-                    <tr><td>
+
+                    <td>
                         <label  for="pets">Pets Allowed: *</label></td>
                         <td><select id="pets" class="inputform" name="title">
                             <option value="">Select Yes or No</option>
