--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -40,8 +40,7 @@
             <form>
 
                 <table class="table3">
-                    <tr><td colspan="3">List your Property!...</td>
-                    <td class="small">* Required Fields</td>
+                    <tr><td colspan="3">List your Property!... * Required Fields</td>
 
                     <tr>
                         <td><label for="bbname">B&B Name: *</label></td>
