--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -115,7 +115,7 @@
                         </td>
                     </tr>
                     <tr><td></td>
-                        <td><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
+                        <td colspan="3"><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
                     </tr>
                 </table></form>
 
