--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -121,9 +121,18 @@
 
 
 </section>
+
+
+
+<section class="spacer" id="spacer">
+
+
+</section>
+
+
 <section>
 
-            <button class="accordion">B&B Name?</button>
+            <button class="accordion">   Information for completing the registration form - B&B Name</button>
             <div class="panel">
                 <p>Enter the name of your bed and breakfast as you want it displayed on the site. This will be the name returned in the search results. Maximum number of characters is 50.</p>
             </div>
