--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -114,7 +114,7 @@
                         </select>
                         </td>
                     </tr>
-                    <tr><td></td>
+                    <tr>
                         <td colspan="3"><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
                     </tr>
                 </table></form>
@@ -220,6 +220,13 @@
         <hr width="100%" size="1">
         <p>Copyright. Team D Solutions.</p>
     </div>
+
+</section>
+
+
+
+<section class="spacer" id="spacer">
+
 
 </section>
 
