--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -129,6 +129,13 @@
 
 </section>
 
+<section class="container" id="featured">
+    <div class="centre">
+
+        <p>Need help with the form?</p>
+    </div>
+</section>
+
 
 <section>
 
