--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -137,7 +137,7 @@
 </section>
 
 
-<section>
+<section id="mycontainer">
 
             <button class="accordion">   Information for completing the registration form - B&B Name</button>
             <div class="panel">
