--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -192,7 +192,7 @@
 
 
 
-            <button class="accordion">Pets Allowed?</button>
+            <button class="accordion lastaccordion">Pets Allowed?</button>
             <div id="foo" class="panel">
                 <p>Blah... Blah... Blah...</p>
             </div>
