--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -193,7 +193,7 @@
 
 
             <button class="accordion lastaccordion">Pets Allowed?</button>
-            <div id="foo" class="lastpanel">
+            <div id="foo" class="panel">
                 <p>Blah... Blah... Blah...</p>
             </div>
 
