--- a/Customerinfo.html
+++ b/Customerinfo.html
@@ -32,6 +32,13 @@
     </div>
 </section>
 
+
+
+<section class="spacer" id="spacer">
+
+
+</section>
+
 <section class="container" id="content2">
 
     <form>
@@ -89,6 +96,13 @@
         </table></form>
 
 
+
+
+</section>
+
+
+
+<section class="spacer" id="spacer">
 
 
 </section>
