--- a/Customerinfo.html
+++ b/Customerinfo.html
@@ -13,7 +13,7 @@
 
 <section class="container" id="banner">
     <div class="floatleft">
-        <img src = "assets/b&blogotransparentcrop.png" id="img">
+        <img src = "assets/bnblogoorange.png" id="img">
     </div>
     <div class="floatright">
     </div>
