--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -139,7 +139,7 @@
 
 <section id="mycontainer">
 
-            <button class="accordion">   Information for completing the registration form - B&B Name</button>
+            <button class="accordion">Adding you bed and breakfast name</button>
             <div class="panel">
                 <p>Enter the name of your bed and breakfast as you want it displayed on the site. This will be the name returned in the search results. Maximum number of characters is 50.</p>
             </div>
