--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -20,7 +20,7 @@
     </div>
 </section>
 
-<section class="container" id="navigation">
+<section class="container" id="navigation2">
     <div>
         <nav role="main">
             <ul>
