--- a/Customerinfo.html
+++ b/Customerinfo.html
@@ -19,7 +19,7 @@
     </div>
         </section>
 
-<section class="container" id="navigation">
+<section class="container" id="navigation2">
     <div>
         <nav role="main">
             <ul>
