--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -38,6 +38,16 @@
 
 
 </section>
+
+<section class="container" id="featured">
+    <div class="centre">
+
+        <p>Registration form</p>
+    </div>
+</section>
+
+
+
 <section>
 
 
