--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -42,7 +42,7 @@
 <section class="container" id="featured">
     <div class="centre">
 
-        <p>Registration form</p>
+        <p>Bed and breakfast registration form</p>
     </div>
 </section>
 
@@ -54,7 +54,7 @@
             <form>
 
                 <table class="table3">
-                    <tr><td colspan="3">List your Property!... * Required Fields</td>
+                    <tr><td colspan="3"><p>List your Property!... * Required Fields</p></td>
 
                     <tr>
                         <td><label for="bbname">B&B Name: *</label></td>
