--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -124,8 +124,8 @@
                         </select>
                         </td>
                     </tr>
-                    <tr><td></td><td></td>
-                        <td><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
+                    <tr>
+                        <td><p><input id="submit" type="submit" value="Submit!" class="submit" /></p></td>
                     </tr>
                 </table></form>
 
