--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -125,7 +125,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><p><input id="submit" type="submit" value="Submit!" class="submit" /></p></td>
+                        <td colspan="3"><p><input id="submit" type="submit" value="Submit!" class="submit" /></p></td>
                     </tr>
                 </table></form>
 
