--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -54,7 +54,7 @@
             <form>
 
                 <table class="table3">
-                    <tr><td colspan="3"><p>List your Property!... * Required Fields</p></td>
+                    <tr><td colspan="3"><p>* Required Fields</p></td>
 
                     <tr>
                         <td><label for="bbname">B&B Name: *</label></td>
@@ -125,7 +125,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="6"><p><input id="submit" type="submit" value="Submit!" class="submit" /></p></td>
+                        <td colspan="6"><p><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
                     </tr>
                 </table></form>
 
