--- a/Customerinfo.html
+++ b/Customerinfo.html
@@ -32,11 +32,18 @@
     </div>
 </section>
 
-
-
 <section class="spacer" id="spacer">
 
 
+</section>
+
+
+
+<section class="container" id="featured">
+    <div class="centre">
+
+        <p>You're almost there... please enter your details to complete your booking</p>
+    </div>
 </section>
 
 <section class="container" id="content2">
