--- a/Customerinfo.html
+++ b/Customerinfo.html
@@ -51,8 +51,8 @@
     <form>
 
         <table class="table3">
-            <tr><td colspan="2">Enter your details.</td></tr>
-            <tr><td class="small">* Required Fields</td></tr>
+
+            <tr><td class="small"><p>* Required Fields</p></td></tr>
             <tr><td>
                     <label for="title">Title: *</label></td>
                 <td><select class="inputform" name="title" id="title">
