--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -230,15 +230,16 @@
 
 
 </section>
-        <section class="container" id="foot">
+<section class="container" id="foot">
 
     <div id="footernav">
         <nav role="sub">
             <ul>
-                <li><a href="B&Bregistration.html">Contact</a></li>
-                <li><a href="B&Bregistration.html">Register</a></li>
-                <li><a href="OwnerSignIn.php">Member Area</a></li>
                 <li><a href="SearchBB.php">Search</a></li>
+                <li><a href="OwnerSignIn.php">Member Area</a></li>
+                <li><a href="B&Bregistration.html">Register</a></li>
+                <li><a href="help.php#contactsection">Contact</a></li>
+                <li><a href="help.php#helpsection">Help</a></li>
             </ul>
         </nav>
     </div>
@@ -248,6 +249,7 @@
     </div>
 
 </section>
+
 
 
 
