--- a/Customerinfo.html
+++ b/Customerinfo.html
@@ -64,38 +64,51 @@
                         <option value="Ms">Ms</option>
                     </select>
                 </td>
-            </tr>
-            <tr>
+
+                <td><label for="postcode">Postcode: *</label></td>
+                <td><input type="text" id="postcode" class="inputform" name="postcode" value="Enter your First Name" required /></td>
+
+<tr></tr>
+
                 <td><label for="firstname">First Name: *</label></td>
                 <td><input type="text" id="firstname" class="inputform" name="firstname" value="Enter your First Name" required /></td>
-            </tr>
-            <tr>
-                <td><label for="surname">Surname: *</label></td>
-                <td><input type="text" id="surname" class="inputform" name="surname" value="Enter your Surname" required /></td>
+
+            <td><label for="city">City: *</label></td>
+            <td><input type="text" id="city" class="inputform" name="city" value="Enter your First Name" required /></td>
+
             </tr>
             <tr>
                 <td>
-                    <label for="email">Email: *</label></td>
-                <td><input type="text" id="email" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
+                <td><label for="surname">Surname: *</label></td>
+                <td><input type="text" id="surname" class="inputform" name="surname" value="Enter your Surname" required /></td>
+
+                <td>
+                    <label for="telephone">Telephone: *</label></td>
+                <td><input type="text" id="telephone" class="inputform" name="telephone" placeholder=" Enter your telephone number" size="20" maxlength="20" required /></td>
+
             </tr>
-
-
-
-
             <tr><td>
                     <label for="address">Address: *</label></td>
                 <td><input type="text" id="address" class="inputform" name="address" placeholder=" Enter first line of your address" size="30" maxlength="50" required /></td>
+
+                <td>
+                    <label for="mobile">Mobile: *</label></td>
+                <td><input type="text" id="mobile" class="inputform" name="mobile" placeholder=" Enter first line of your address" size="30" maxlength="50" required /></td>
+
+
             </tr>
 
             <tr><td>
                     <label for="address2">Address Line 2: *</label></td>
                 <td><input type="text" id="address2" class="inputform" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
+                <label for="email">Email: *</label></td>
+                <td><input type="text" id="email" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
+
+
             </tr>
 
 
-            <tr><td>
-                    <label for="telephone">Telephone: *</label></td>
-                <td><input type="text" id="telephone" class="inputform" name="telephone" placeholder=" Enter your telephone number" size="20" maxlength="20" required /></td>
+            <tr>
             </tr>
 
             <tr><td></td>
