--- a/Customerinfo.html
+++ b/Customerinfo.html
@@ -54,7 +54,9 @@
         <table class="table3">
 
             <tr><td class="small"><p>* Required Fields</p></td></tr>
-            <tr><td>
+
+            <tr>
+                <td>
                     <label for="title">Title: *</label></td>
                 <td><select class="inputform" name="title" id="title">
                         <option value="">Select Title</option>
@@ -67,9 +69,8 @@
 
                 <td><label for="postcode">Postcode: *</label></td>
                 <td><input type="text" id="postcode" class="inputform" name="postcode" value="Enter your First Name" required /></td>
-
-<tr></tr>
-
+            </tr>
+            <tr>
                 <td><label for="firstname">First Name: *</label></td>
                 <td><input type="text" id="firstname" class="inputform" name="firstname" value="Enter your First Name" required /></td>
 
@@ -78,7 +79,7 @@
 
             </tr>
             <tr>
-                <td>
+
                 <td><label for="surname">Surname: *</label></td>
                 <td><input type="text" id="surname" class="inputform" name="surname" value="Enter your Surname" required /></td>
 
@@ -101,15 +102,14 @@
             <tr><td>
                     <label for="address2">Address Line 2: *</label></td>
                 <td><input type="text" id="address2" class="inputform" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
-                <label for="email">Email: *</label></td>
+                <td><label for="email">Email: *</label></td>
                 <td><input type="text" id="email" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
 
 
             </tr>
 
 
-            <tr>
-            </tr>
+
 
             <tr><td></td>
                 <td><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
