--- a/Customerinfo.html
+++ b/Customerinfo.html
@@ -111,8 +111,8 @@
 
 
 
-            <tr><td></td>
-                <td><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
+            <tr>
+                <td colspan="4"><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
             </tr>
         </table></form>
 
