--- a/Customerinfo.html
+++ b/Customerinfo.html
@@ -43,6 +43,44 @@
 <section class="container" id="featured">
     <div class="centre">
 
+        <p>B&B details... please select your room...</p>
+    </div>
+</section>
+
+
+<section class="container" id="content2">
+    <table class="table6">
+
+        <tr><td><p>B&B details</p></td><td><p>
+            School of Computing Science and Digital Media
+            <br>The Sir Ian Wood Building
+            <br>Robert Gordon University
+            <br>Garthdee Road
+            <br>Aberdeen
+            <br>AB10 7GJ
+
+        </p></td></tr>
+
+
+
+    </table>
+
+
+
+</section>
+
+
+
+<section class="spacer" id="spacer">
+
+
+</section>
+
+
+
+<section class="container" id="featured">
+    <div class="centre">
+
         <p>You're almost there... please enter your details to complete your booking</p>
     </div>
 </section>
