here we go again!

--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -59,95 +59,55 @@
 
                     <tr>
                     <td><label for="ownerid">Owner ID: *</label></td>
-                    <td><input id="ownerid" type="text" class="inputform" name="ownerid" placeholder="Enter your Owner ID" required /></td>
+                    <td><input id="ownerid" type="text" class="inputform" name="ownerid" value="Owner ID" size="20" maxlength="10" required /></td>
                     <td><label for="region">Region: *</label></td>
-                    <td><input id="region" type="text" class="inputform" name="region" placeholder="Enter Region" size="30" maxlength="50" required /></td>
+                    <td><input id="region" type="text" class="inputform" name="region" placeholder="Enter Region" size="20" maxlength="30" required /></td>
                     <td><label for="bbdescription">B&B Description: *</label></td>
-                    <td><input id="bbdescription" type="text" class="inputform" name="bbdescription" placeholder=" Enter a description of your B&B" size="30" maxlength="50" required /></td>
-
-
+                    <td><input id="bbdescription" type="text" class="inputform" name="bbdescription" placeholder=" Enter B&B description" size="30" maxlength="50" required /></td>
                 </tr>
-
                     <tr>
-
                         <td><label for="bbname">B&B Name: *</label></td>
                         <td><input id="bbname" type="text" class="inputform" name="bbname" placeholder="Enter your B&B Name" required /></td>
-
                         <td><label for="telephone">Telephone: *</label></td>
                     <td><input id="telephone" type="text" class="inputform" name="telephone" placeholder=" Enter your telephone number" size="20" maxlength="20" required /></td>
-
-
-
-                        <td><label for="picture">Image URL: *</label></td>
+                       <td><label for="picture">Image URL: *</label></td>
                         <td><input id="picture" type="text" class="inputform" name="picture" required /></td>
-
-
-
-
                     </tr>
-
                     <tr>
-
                         <td><label for="address">Address: *</label></td>
                         <td><input id="address" type="text" class="inputform" name="address" placeholder=" Enter first line of your address" size="30" maxlength="50" required /></td>
-
                         <td><label for="mobile">Mobile: *</label></td>
                         <td><input id="mobile" type="text" class="inputform" name="mobile" placeholder="Enter your mobile number" size="20" maxlength="20" required /></td>
-
-
                         <td><label for="checkin">Check-in time: *</label></td>
                         <td><input id="checkin" type="text" class="inputform" name="check-in" placeholder="Enter the check-in time" required /></td>
-
-
-
                     </tr>
-
                     <tr>
-
                         <td><label for="address2">Address Line 2: *</label></td>
                         <td><input id="address2" type="text" class="inputform" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
-
                         <td><label for="email">Email: *</label></td>
                         <td><input id="email" type="text" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
-
-
                         <td><label for="checkout">Check-out time: *</label></td>
-                        <td><input id="checkout" type="text" class="inputform" name="check-out" placeholder="Enter the check-out time" required /></td>
-
-
-
+                        <td><input id="checkout" type="text" class="inputform" name="check-out" placeholder="Enter the check-out time" size="20" maxlength="10"  required /></td>
                     </tr>
-
                     <tr>
-
                         <td><label for="postcode">Postcode: *</label></td>
-                        <td><input id="postcode" type="text" class="inputform" name="postcode" placeholder=" Enter your postcode" size="30" maxlength="50" required /></td>
-
+                        <td><input id="postcode" type="text" class="inputform" name="postcode" placeholder=" Enter your postcode" size="20" maxlength="50" required /></td>
                         <td><label for="latitude">Latitude: *</label></td>
-                        <td><input id="latitude" type="text" class="inputform" name="latitude" placeholder=" Enter latitude" size="30" maxlength="50" required /></td>
-
+                        <td><input id="latitude" type="text" class="inputform" name="latitude" placeholder=" Enter latitude" size="20" maxlength="50" required /></td>
                         <td><label  for="pets">Pets Allowed: *</label></td>
                         <td><select id="pets" class="inputform" name="title">
                             <option value="">Select Yes or No</option>
                             <option value="Yes">Yes</option>
                             <option value="No">No</option>
-
                         </select>
                         </td>
-
                     </tr>
-
                     <tr>
-
                         <td><label for="city">City: *</label></td>
-                        <td><input id="city" type="text" class="inputform" name="city" placeholder=" Enter City" size="30" maxlength="50" required /></td>
+                        <td><input id="city" type="text" class="inputform" name="city" placeholder=" Enter City" size="20" maxlength="50" required /></td>
                         <td><label for="longitude">Longitude: *</label></td>
-                        <td><input id="longitude" type="text" class="inputform" name="longitude" placeholder=" Enter longitude" size="30" maxlength="50" required /></td>
-
-
-
+                        <td><input id="longitude" type="text" class="inputform" name="longitude" placeholder=" Enter longitude" size="20" maxlength="50" required /></td>
                     </tr>
-
                     <tr>
                     <td colspan="6"><p><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
                     </tr>
