--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -59,7 +59,7 @@
 
                     <tr>
                     <td><label for="ownerid">Owner ID: *</label></td>
-                    <td><input id="ownerid" type="text" class="inputform" name="ownerid" value="Owner ID from db" size="20" maxlength="10" required /></td>
+                    <td><input id="ownerid" type="text" class="inputform" name="ownerid" value="Owner ID insert from db" size="20" maxlength="10" readonly /></td>
                     <td><label for="region">Region: *</label></td>
                     <td><input id="region" type="text" class="inputform" name="region" placeholder="Enter Region" size="20" maxlength="30" required /></td>
                     <td><label for="bbdescription">B&B Description: *</label></td>
