here we go again!

--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -83,7 +83,7 @@
                     </tr>
                     <tr>
                         <td><label for="address2">Address Line 2: *</label></td>
-                        <td><input id="address2" type="text" class="inputform" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
+                        <td><input id="address2" type="text" class="inputform" name="address2" placeholder=" Enter the second line of the Address" size="30" maxlength="50" required /></td>
                         <td><label for="email">Email: *</label></td>
                         <td><input id="email" type="text" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
                         <td><label for="checkout">Check-out Time: *</label></td>
