--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -63,19 +63,19 @@
                     <td><label for="region">Region: *</label></td>
                     <td><input id="region" type="text" class="inputform" name="region" placeholder="Enter Region" size="20" maxlength="30" required /></td>
                     <td><label for="bbdescription">B&B Description: *</label></td>
-                    <td><input id="bbdescription" type="text" class="inputform" name="bbdescription" placeholder=" Enter B&B Description" size="30" maxlength="50" required /></td>
+                    <td><input id="bbdescription" type="text" class="inputform" name="bbdescription" placeholder="Enter B&B Description" size="30" maxlength="50" required /></td>
                 </tr>
                     <tr>
                         <td><label for="bbname">B&B Name: *</label></td>
                         <td><input id="bbname" type="text" class="inputform" name="bbname" placeholder="Enter B&B Name" size="20" maxlength="30" required /></td>
                         <td><label for="telephone">Telephone: *</label></td>
-                    <td><input id="telephone" type="text" class="inputform" name="telephone" placeholder=" Enter your Telephone Number" size="20" maxlength="20" required /></td>
+                    <td><input id="telephone" type="text" class="inputform" name="telephone" placeholder="Enter your Telephone Number" size="20" maxlength="20" required /></td>
                        <td><label for="picture">Image URL: *</label></td>
                         <td><input id="picture" type="text" class="inputform" name="picture" size="30" maxlength="250" required /></td>
                     </tr>
                     <tr>
                         <td><label for="address">Address: *</label></td>
-                        <td><input id="address" type="text" class="inputform" name="address" placeholder=" Enter the first line of the Address" size="30" maxlength="50" required /></td>
+                        <td><input id="address" type="text" class="inputform" name="address" placeholder="Enter the first line of the Address" size="30" maxlength="50" required /></td>
                         <td><label for="mobile">Mobile: *</label></td>
                         <td><input id="mobile" type="text" class="inputform" name="mobile" placeholder="Enter your Mobile Number" size="20" maxlength="20" required /></td>
                         <td><label for="checkin">Check-in Time: *</label></td>
@@ -83,17 +83,17 @@
                     </tr>
                     <tr>
                         <td><label for="address2">Address Line 2: *</label></td>
-                        <td><input id="address2" type="text" class="inputform" name="address2" placeholder=" Enter the second line of the Address" size="30" maxlength="50" required /></td>
+                        <td><input id="address2" type="text" class="inputform" name="address2" placeholder="Enter the second line of the Address" size="30" maxlength="50" required /></td>
                         <td><label for="email">Email: *</label></td>
-                        <td><input id="email" type="text" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
+                        <td><input id="email" type="text" class="inputform" name="email" placeholder="Enter you Email Address" size="30" maxlength="50" required /></td>
                         <td><label for="checkout">Check-out Time: *</label></td>
                         <td><input id="checkout" type="text" class="inputform" name="checkout" placeholder="Enter the Check-out Time" size="20" maxlength="10" required /></td>
                     </tr>
                     <tr>
                         <td><label for="postcode">Postcode: *</label></td>
-                        <td><input id="postcode" type="text" class="inputform" name="postcode" placeholder=" Enter the Postcode" size="20" maxlength="8" required /></td>
+                        <td><input id="postcode" type="text" class="inputform" name="postcode" placeholder="Enter the Postcode" size="20" maxlength="8" required /></td>
                         <td><label for="latitude">Latitude: *</label></td>
-                        <td><input id="latitude" type="text" class="inputform" name="latitude" placeholder=" Enter the Latitude of B&B" size="20" maxlength="20" required /></td>
+                        <td><input id="latitude" type="text" class="inputform" name="latitude" placeholder="Enter the Latitude of B&B" size="20" maxlength="20" required /></td>
                         <td><label  for="pets">Pets Allowed: *</label></td>
                         <td><select id="pets" class="inputform" name="pets">
                             <option value="">Select Yes or No</option>
