--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -71,7 +71,7 @@
                         <td><label for="telephone">Telephone: *</label></td>
                     <td><input id="telephone" type="text" class="inputform" name="telephone" placeholder="Enter your Telephone Number" size="20" maxlength="20" required /></td>
                        <td><label for="picture">Image URL: *</label></td>
-                        <td><input id="picture" type="text" class="inputform" name="picture" size="30" maxlength="250" required /></td>
+                        <td><input id="picture" type="text" class="inputform" name="picture" placeholder="Enter image URL" size="30" maxlength="250" required /></td>
                     </tr>
                     <tr>
                         <td><label for="address">Address: *</label></td>
